--- a/TableSoccer/Client/Pages/Users.razor
+++ b/TableSoccer/Client/Pages/Users.razor
@@ -1,5 +1,5 @@
 ﻿@page "/users"
-@using TableSoccer.Shared
+@using TableSoccer.Shared.Models
 @inject HttpClient Http
 @inject IJSRuntime JsRuntime
 
