--- a/TableSoccer/Client/_Imports.razor
+++ b/TableSoccer/Client/_Imports.razor
@@ -5,3 +5,5 @@
 @using Microsoft.JSInterop
 @using TableSoccer.Client
 @using TableSoccer.Client.Shared
+@using TableSoccer.Shared.Models
+@using TableSoccer.Client.Components
