--- a/TableSoccer/Client/_Imports.razor
+++ b/TableSoccer/Client/_Imports.razor
@@ -3,7 +3,10 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using TableSoccer.Client
-@using TableSoccer.Client.Shared
+
 @using TableSoccer.Shared.Models
+@using TableSoccer.Shared.Validations
+
+@using TableSoccer.Client
 @using TableSoccer.Client.Components
+@using TableSoccer.Client.Shared
